--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <!-- Optional theme -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     
-  <body background="http://s.hswstatic.com/gif/climbing-mount-everest-5.jpg">
+  <body background="https://s.graphiq.com/sites/default/files/2307/media/images/t2/Light_Blue_429604_i0.png">
     <title>Everest Products</title>
 
 
@@ -56,7 +56,7 @@
 
 
 <br><br><br><br>
-<center><img src="https://patenaudewordpress.files.wordpress.com/2016/01/cooltext159332943453295.png?w=768"  style="width:1314px;height:238px;"></center>
+<center><img src="https://patenaudewordpress.files.wordpress.com/2016/02/everest-prducts-logo.png?w=768"  style="width:1314px;height:238px;"></center>
 <br>
 
 <div class="jumbotron">
